# aurora

./: .gitignore  Cargo.toml  a.out
examples/: hello_world.aur
macros/: Cargo.toml
macros/src/: lib.rs
src/: error.rs  main.rs
src/ast/: expressions.rs  mod.rs  statements.rs  types.rs
src/ast/llvm/: mod.rs
src/codegen/: mod.rs
src/lexer/: error.rs  lex.rs  mod.rs  tokens.rs
src/parser/: error.rs  expressions.rs  mod.rs  parser.rs
tests/: Cargo.toml
tests/src/: main.rs
