[package]
name = "aurorac"
version = "0.1.0"
edition = "2021"

[features]
debug = []

[dependencies]
regex = "1.7.3"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
aurorac_macros = { version = "0.1.0", path = "macros" }
